--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,14 @@
         "list.h": "c",
         "commands.h": "c",
         "list_impl.h": "c",
-        "stack_impl.h": "c"
+        "stack_impl.h": "c",
+        "array": "c",
+        "charconv": "c",
+        "compare": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "variant": "c"
     }
 }
