finished the parser, going to test it now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "main.C": "cpp",
+        "main.c": "c",
         "stack.h": "c",
         "list.h": "c",
         "commands.h": "c",
